--- a/Source/Inthudo/Presentation/Web/Content/Site.css
+++ b/Source/Inthudo/Presentation/Web/Content/Site.css
@@ -1,6 +1,10 @@
 ﻿/*Customize*/
 .lbtitle {
-    width:120px;
+    min-width:160px;
+    display:inline-block;
+}
+
+.order-status {
     display:inline-block;
 }
 
@@ -114,7 +118,7 @@ h5, h6 {
 ----------------------------------------------------------*/
 .content-wrapper {
     margin: 0 auto;
-    max-width: 960px;
+    max-width: 1200px;
 }
 
 #body {
