--- a/Source/Inthudo/Presentation/Web/Content/Site.css
+++ b/Source/Inthudo/Presentation/Web/Content/Site.css
@@ -9,6 +9,11 @@
     display:inline-block;
 }
 
+.lbtitle-product-approve {
+    min-width:253px;
+    display:inline-block;
+}
+
 .total {
     min-width:20px;
     display:inline-block;
