--- a/Source/Inthudo/Presentation/Web/Content/Site.css
+++ b/Source/Inthudo/Presentation/Web/Content/Site.css
@@ -58,6 +58,45 @@
 }
 /*Customize*/
 
+/*Menu*/
+.level1
+{
+    color: White;
+    background-color: white;
+    font-variant: small-caps;
+    font-size: large;
+    font-weight: bold;
+    padding:10px;
+}
+
+.level2
+{
+    color: Blue;
+    font-family: Gill Sans MT !important;
+    font-size: medium;
+    background-color: Gray;
+}
+
+.level3
+{
+    color: black;
+    background-color: Silver;
+    font-family: Gill Sans MT !important;
+    font-size: small;
+}
+
+.hoverstyle
+{
+    font-weight: bold;
+}
+
+.level4
+{
+    background-color: Gray !important;
+    color: White !important;
+    font-size: small;
+} 
+/*/End Menu/*/
 
 html {
     background-color: #e2e2e2;
