--- a/Source/Inthudo/Presentation/Web/Site.Master
+++ b/Source/Inthudo/Presentation/Web/Site.Master
@@ -51,14 +51,14 @@
                         <AnonymousTemplate>
                             <ul>
                                 <li><a id="registerLink" runat="server" href="~/Account/Register">Register</a></li>
-                                <li><a id="loginLink" runat="server" href="~/Account/Login">Log in</a></li>
+                                <li><a id="loginLink" runat="server" href="~/Login.aspx">Log in</a></li>
                             </ul>
                         </AnonymousTemplate>
                         <LoggedInTemplate>
                             <p>
                                 Hello, <a runat="server" class="username" href="~/Account/Manage" title="Manage your account">
                                     <asp:LoginName runat="server" CssClass="username" /></a>!
-                                <asp:LoginStatus runat="server" LogoutAction="Redirect" LogoutText="Log off" LogoutPageUrl="~/" />
+                                <asp:LoginStatus runat="server" LogoutAction="Redirect" LogoutText="Log off" LogoutPageUrl="~/Login.aspx" />
                             </p>
                         </LoggedInTemplate>
                     </asp:LoginView>
@@ -76,6 +76,18 @@
     <div id="body">
         <asp:ContentPlaceHolder runat="server" ID="FeaturedContent" />
         <section class="content-wrapper main-content clear-fix">
+        <asp:Menu ID="Menu1" runat="server" Orientation="Horizontal" >
+            <LevelMenuItemStyles>
+                <asp:MenuItemStyle CssClass="level1" />
+            </LevelMenuItemStyles>
+            
+            <Items>
+                <asp:MenuItem NavigateUrl="~/Orders.aspx" Text="Quản lý đơn hàng" Value="Quản lý đơn hàng"></asp:MenuItem>
+                <asp:MenuItem NavigateUrl="~/DesignRequests.aspx" Text="Quản lý thiết kế" Value="Quản lý thiết kế"></asp:MenuItem>
+                <asp:MenuItem NavigateUrl="~/Members.aspx" Text="Quản lý nhân viên" Value="Quản lý nhân viên"></asp:MenuItem>
+            </Items>
+        </asp:Menu>
+
             <asp:Panel runat="server" ID="pnlMessage" EnableViewState="false" Visible="false">
                     <asp:Literal runat="server" ID="lMessage" EnableViewState="false" />
                     <asp:Literal runat="server" ID="lMessageComplete" EnableViewState="false" />
