--- a/Source/Inthudo/Presentation/Web/Site.Master
+++ b/Source/Inthudo/Presentation/Web/Site.Master
@@ -76,16 +76,25 @@
     <div id="body">
         <asp:ContentPlaceHolder runat="server" ID="FeaturedContent" />
         <section class="content-wrapper main-content clear-fix">
-        <asp:Menu ID="Menu1" runat="server" Orientation="Horizontal" >
+        <asp:Menu ID="Menu1" runat="server" Orientation="Horizontal" BackColor="#B5C7DE" DynamicHorizontalOffset="2" Font-Names="Verdana" Font-Size="0.8em" ForeColor="#284E98" StaticSubMenuIndent="10px" >
             <LevelMenuItemStyles>
                 <asp:MenuItemStyle CssClass="level1" />
             </LevelMenuItemStyles>
             
+            <DynamicHoverStyle BackColor="#284E98" ForeColor="White" />
+            <DynamicMenuItemStyle HorizontalPadding="5px" VerticalPadding="2px" />
+            <DynamicMenuStyle BackColor="#B5C7DE" />
+            <DynamicSelectedStyle BackColor="#507CD1" />
+            
             <Items>
-                <asp:MenuItem NavigateUrl="~/Orders.aspx" Text="Quản lý đơn hàng" Value="Quản lý đơn hàng"></asp:MenuItem>
-                <asp:MenuItem NavigateUrl="~/DesignRequests.aspx" Text="Quản lý thiết kế" Value="Quản lý thiết kế"></asp:MenuItem>
-                <asp:MenuItem NavigateUrl="~/Members.aspx" Text="Quản lý nhân viên" Value="Quản lý nhân viên"></asp:MenuItem>
+                <asp:MenuItem NavigateUrl="~/Orders.aspx" Text="Đơn hàng" Value="Quản lý đơn hàng"></asp:MenuItem>
+                <asp:MenuItem NavigateUrl="~/DesignRequests.aspx" Text="Thiết kế" Value="Quản lý thiết kế"></asp:MenuItem>
+                <asp:MenuItem NavigateUrl="~/Manufactures.aspx" Text="Sản xuất" Value="Quản lý sản xuất"></asp:MenuItem>
+                <asp:MenuItem NavigateUrl="~/Members.aspx" Text="Nhân viên" Value="Quản lý nhân viên"></asp:MenuItem>
             </Items>
+            <StaticHoverStyle BackColor="#284E98" ForeColor="White" />
+            <StaticMenuItemStyle HorizontalPadding="5px" VerticalPadding="2px" />
+            <StaticSelectedStyle BackColor="#507CD1" />
         </asp:Menu>
 
             <asp:Panel runat="server" ID="pnlMessage" EnableViewState="false" Visible="false">
